fix(layout): sidebar height on mobile

--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -46,6 +46,7 @@
         transition: var(--jdd-sidebar-transition);
         z-index: 50;
         max-width: 90vw;
+        height: 100dvh;
       }
 
       .layout-sidebar:first-child {
